<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quản Lý Chi Tiêu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="themgiaodich">Thêm G.Dịch</string>
    <string name="homnay">Hôm Nay</string>
    <string name="tuannay">Tuần Này</string>
    <string name="thangnay">Tháng Này</string>
    <string name="namnay">Năm Nay</string>
    <string name="gioithieu">Giới Thiệu</string>
    <string name="tongthu">Tổng Thu</string>
    <string name="tongchi">Tổng Chi</string>
    <string name="sodu">Số Dư</string>
    <string name="khoanthuchi">Khoản thu chi</string>
    <string name="themmoi">Thêm Mới</string>
    <string name="huy">Hủy</string>
    <string name="sotien">Số Tiền</string>
    <string name="action_delete">Delete</string>
    <string name="giaodich">Thêm Giao Dịch</string>
    <string name="taikhoan">Tài Khoản</string>
    <string name="themloaigiaodich">Loại Giao Dịch</string>
    <string name="lydo">Lý Do</string>
    <string name="lydogiaodich">Lý do giao dịch</string>
    <string name="phannhom">Phân Nhóm</string>
    <string name="trangthai">Trạng Thái</string>
    <string name="ngayhientai">Ngày Hiện Tại</string>
    <string name="chonngay">Chọn Ngày</string>
    <string name="chongio">Chọn Giờ</string>
    <string name="ngaygiaodich">Ngày Giao Dịch</string>
    <string name="dong">Đóng</string>
    <string name="dongvaluu">Lưu</string>
    <string name="ngay">Chọn ngày</string>
    <string name="gio">Chọn giờ</string>
    <string name="title_activity_thong_tin_giao_dich">Thông Tin Giao Dịch</string>
    <string name="xemgd">Xem G.D</string>
    <string name="action_themGD">Thêm Giao Dịch</string>
    <string name="copy">Copy right 2017 FPoly HCM CS1</string>
    <string name="makeby">Make By: Lê Công Hậu</string>
    <string name="masv">Mã Sinh Viên: PS04107</string>
    <string name="lop">Lớp: PT12103</string>
    <string name="sdt">SĐT: 0911 795 895</string>
    <string name="email">Email: leconghau2@gmail.com</string>

</resources>
