<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="20dp"
    tools:context="com.example.androidlayout_asigment.ThemGiaoDichActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/taikhoan" 
	        android:textColor="#000000"/>
	    
	    <Spinner 
	        android:id="@+id/spnThemTaiKhoan"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/themloaigiaodich" 
	        android:textColor="#000000"/>
	    
	    <Spinner 
	        android:id="@+id/spnThemLoaiGiaoDich"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sotien" 
	        android:textColor="#000000"/>
	    
	    <EditText 
	        android:id="@+id/edtThemTienGiaoDich"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sotien"
	        android:inputType="number"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lydo" 
	        android:textColor="#000000"/>
	    
	    <EditText 
	        android:id="@+id/edtLyDoGiaoDich"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lydogiaodich"
	        android:inputType="text"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/phannhom" 
	        android:textColor="#000000"/>
	    
	    <Spinner 
	        android:id="@+id/spnThemPhanNhom"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/trangthai" 
	        android:textColor="#000000"/>
	    
	    <Spinner 
	        android:id="@+id/spnTrangThai"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ngaygiaodich" 
	        android:textColor="#000000"/>
	    
	    <TableLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/tableLayout"
	        android:stretchColumns="0">
	        
	        <TableRow 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            
	            <EditText 
	                android:id="@+id/edtNgay"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/ngay"
	                />
	            
	            <Button 
	                android:id="@+id/btnChonNgay"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/chonngay"/>
	            
	        </TableRow>
	        
	        <TableRow 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            
	            <EditText 
	                android:id="@+id/edtGio"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/gio"
	                />
	            
	            <Button 
	                android:id="@+id/btnChonGio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/chongio"/>
	            
	        </TableRow>
	    </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnDong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dong" />

                <Button
                    android:id="@+id/btnDongVaLuu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dongvaluu" />
                
                <Button
                    android:id="@+id/btnXemGD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xemgd" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>
