<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    
    <EditText 
        android:id="@+id/edtKhoanThuChi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/khoanthuchi"/>
    
    <Spinner 
        android:id="@+id/spinnerLoaiThuChi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        
        <Button 
            android:id="@+id/btnThemMoi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/themmoi"/>
        
        <Button 
            android:id="@+id/btnHuyThemMoi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/huy"/>
    </LinearLayout>

</LinearLayout>
