<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidlayout_asigment.ThuChiActivity" >
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ListView
	        android:id="@+id/lvThuChi"
	        android:layout_width="fill_parent"
	        android:layout_height="141dp" 
	        android:background="#FFFFFF"
	        android:padding="10dp">
	    </ListView>

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="15dp"
	        android:paddingRight="15dp" 
	        android:background="#FFFFFF">

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_toRightOf="@+id/imageView1"
	            android:text="@string/sodu"
				android:textStyle="bold"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_alignBottom="@+id/textView1"
	            android:layout_alignParentLeft="true"
	            android:layout_alignTop="@+id/textView1"
	            android:src="@drawable/money" />

	        <TextView
	            android:id="@+id/tvSoDu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textView1"
	            android:layout_alignBottom="@+id/textView1"
	            android:layout_alignParentRight="true"
	            android:text="Medium Text"
	            android:background="#FFCC00"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </RelativeLayout>
	
	    <TableLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:stretchColumns="*"
	        android:shrinkColumns="*"
	        android:orientation="vertical"
	        android:background="#FFFFFF"
	        android:layout_marginTop="5dp"
	        android:padding="10dp">
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <Button 
	                android:id="@+id/btnThemgiaodich"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/themgiaodich"/>
	            <Button 
	                android:id="@+id/btnHomnay"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/homnay"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <Button 
	                android:id="@+id/btnTuannay"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/tuannay"/>
	            <Button 
	                android:id="@+id/btnThangnay"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/thangnay"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <Button 
	                android:id="@+id/btnNamnay"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/namnay"/>
	            <Button 
	                android:id="@+id/btnGioiThieu"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:text="@string/gioithieu"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>
    </LinearLayout>

</ScrollView>
